# llm_swarm

./: .gitignore  0001-remediation.patch  CLAUDE.md  Dockerfile  PANEL_ROADMAP.md  PROJECT_CONTEXT.md  README.md  README_FOR_STASIA.md  docker-compose.yaml  index.html  log.txt  maf.md  orchestrator_changes.md  patch.b64
iros_llm_orchestrator/: .buildinfo  genindex.html  index.html  iros_llm_orchestrator.chat_server.html  iros_llm_orchestrator.common.command_prompt.html  iros_llm_orchestrator.common.decision_prompt.html  iros_llm_orchestrator.common.html  iros_llm_orchestrator.common.leaf_sender.html  iros_llm_orchestrator.common.llm_factory.html  iros_llm_orchestrator.common.logger.html  iros_llm_orchestrator.common.mock_client.html  iros_llm_orchestrator.common.parsers.html  iros_llm_orchestrator.common.plan_executor.html  iros_llm_orchestrator.common.scenarios.html  iros_llm_orchestrator.common.user_prompt.html  iros_llm_orchestrator.context.html  iros_llm_orchestrator.context.mcp_readonly_provider.html  iros_llm_orchestrator.context.no_execute.html  iros_llm_orchestrator.context.pose_cache.html  iros_llm_orchestrator.context.provider.html  iros_llm_orchestrator.context.ros_readonly_provider.html  iros_llm_orchestrator.decision_server.html  iros_llm_orchestrator.execute_server.html  iros_llm_orchestrator.help_responder.html  iros_llm_orchestrator.html  iros_llm_orchestrator.local.html  iros_llm_orchestrator.local.ollama_client.html  iros_llm_orchestrator.local.transformers_client.html  iros_llm_orchestrator.passive_observer.html  iros_llm_orchestrator.user_chat_node.html  iros_llm_orchestrator.web.html  iros_llm_orchestrator.web.http_client.html  modules.html  objects.inv  package.xml  py-modindex.html  rosdoc2.yaml  search.html  searchindex.js  setup.cfg  (+3 more)
iros_llm_orchestrator/.doctrees/: environment.pickle  index.doctree  iros_llm_orchestrator.chat_server.doctree  iros_llm_orchestrator.common.command_prompt.doctree  iros_llm_orchestrator.common.decision_prompt.doctree  iros_llm_orchestrator.common.doctree  iros_llm_orchestrator.common.leaf_sender.doctree  iros_llm_orchestrator.common.llm_factory.doctree  iros_llm_orchestrator.common.logger.doctree  iros_llm_orchestrator.common.mock_client.doctree  iros_llm_orchestrator.common.parsers.doctree  iros_llm_orchestrator.common.plan_executor.doctree  iros_llm_orchestrator.common.scenarios.doctree  iros_llm_orchestrator.common.user_prompt.doctree  iros_llm_orchestrator.context.doctree  iros_llm_orchestrator.context.mcp_readonly_provider.doctree  iros_llm_orchestrator.context.no_execute.doctree  iros_llm_orchestrator.context.pose_cache.doctree  iros_llm_orchestrator.context.provider.doctree  iros_llm_orchestrator.context.ros_readonly_provider.doctree  iros_llm_orchestrator.decision_server.doctree  iros_llm_orchestrator.doctree  iros_llm_orchestrator.execute_server.doctree  iros_llm_orchestrator.help_responder.doctree  iros_llm_orchestrator.local.doctree  iros_llm_orchestrator.local.ollama_client.doctree  iros_llm_orchestrator.local.transformers_client.doctree  iros_llm_orchestrator.passive_observer.doctree  iros_llm_orchestrator.user_chat_node.doctree  iros_llm_orchestrator.web.doctree  iros_llm_orchestrator.web.http_client.doctree  modules.doctree  standards.doctree  user_docs.doctree
iros_llm_orchestrator/_sources/: index.rst.txt  iros_llm_orchestrator.chat_server.rst.txt  iros_llm_orchestrator.common.command_prompt.rst.txt  iros_llm_orchestrator.common.decision_prompt.rst.txt  iros_llm_orchestrator.common.leaf_sender.rst.txt  iros_llm_orchestrator.common.llm_factory.rst.txt  iros_llm_orchestrator.common.logger.rst.txt  iros_llm_orchestrator.common.mock_client.rst.txt  iros_llm_orchestrator.common.parsers.rst.txt  iros_llm_orchestrator.common.plan_executor.rst.txt  (+21 more)
iros_llm_rviz_panel/: .buildinfo  CMakeLists.txt  README.md  __readme_include.html  genindex.html  index.html  objects.inv  package.xml  plugin_description.xml  rosdoc2.yaml  search.html  searchindex.js  standards.html  user_docs.html
iros_llm_rviz_tool/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  plugin_description.xml  rosdoc2.yaml  search.html  searchindex.js  standards.html  user_docs.html
iros_llm_swarm_bt/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  rosdoc2.yaml  search.html  searchindex.js  standards.html  user_docs.html
iros_llm_swarm_costmap_plugins/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  resetting_obstacle_layer.xml  rosdoc2.yaml  search.html  searchindex.js  standards.html  user_docs.html
iros_llm_swarm_formation/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  rosdoc2.yaml  search.html  searchindex.js  standards.html  user_docs.html
iros_llm_swarm_interfaces/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  rosdoc2.yaml  search.html  searchindex.js  standards.html  user_docs.html
iros_llm_swarm_mapf/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  standards.html
iros_llm_swarm_mapf_lns/: .buildinfo  CMakeLists.txt  algorithm.html  genindex.html  index.html  objects.inv  package.xml  ros_api.html  rosdoc2.yaml  search.html  searchindex.js  standards.html  user_docs.html
iros_llm_swarm_robot/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  rosdoc2.yaml  search.html  searchindex.js  standards.html  user_docs.html
iros_llm_swarm_simulation/: .buildinfo  genindex.html  index.html  iros_llm_swarm_simulation.html  modules.html  objects.inv  package.xml  py-modindex.html  rosdoc2.yaml  search.html  searchindex.js  setup.cfg  setup.py  standards.html  user_docs.html
iros_llm_swarm_simulation_lite/: .buildinfo  genindex.html  index.html  iros_llm_swarm_simulation_lite.html  iros_llm_swarm_simulation_lite.world_colors.html  modules.html  objects.inv  package.xml  py-modindex.html  rosdoc2.yaml  search.html  searchindex.js  setup.cfg  setup.py  standards.html  user_docs.html
(+621 files in other folders)
