<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iros_llm_swarm_formation</name>
  <version>0.1.0</version>
  <description>
    Formation control for the IROS LLM swarm — leader-follower with PD controllers.
    Manages formation definitions, publishes configs, and runs per-follower controllers.
  </description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message / service dependencies -->
  <depend>iros_llm_swarm_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- C++ controller node -->
  <depend>rclcpp</depend>

  <!-- Python manager node -->
  <depend>rclpy</depend>

  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>